--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dumbiebot",
   "version": "1.0.0",
   "description": "Telegram BOT",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
@@ -10,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.4",
+    "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.66.0",
     "nodemon": "^3.1.4"
   }
